# dota_pubg

./: .gitignore  CMakeLists.txt  app.cpp  how_to_import_dota2_models_into_blender.txt  imgui.ini  project_settings.xml  sloc_options.ini
assets/: DefenseTower.prefab  abilities.ini  arrow.fmod  arrow.prefab  buffs.ini  building_infos.preset  character_infos.preset  characters.ini  cubes.prefab  effects.ini  grid_cell.prefab  grid_unit.prefab  items.ini  launcher.prefab  main.navmesh  main.navmesh.fmod  main.prefab  main_player.prefab  monster.prefab  monster_spawnnings.ini  new_image.dds  new_material_0.fmat  new_prefab_0.prefab  projectile_infos.preset  spawner.prefab  talents.ini  terrain.fmat  terrain.prefab  test.prefab  tower_infos.preset  town_infos.preset  unit_infos.preset  xbot.fbx  xbot.fmod  xbot.prefab  xbot_Beta_Joints_MAT.fmat  xbot_mixamo.com.fani
assets/abilities/: abilities.ini  fire_breath.prefab  strong_body.prefab
assets/animations/: Attack_mixamo.com.fani  Idle_mixamo.com.fani  Run_mixamo.com.fani  sword_shield_idle.fani  sword_shield_run.fani
assets/characters/: A.fmat  A.prefab  B.fmat  B.prefab  Basic.a_cast_end.fani  Basic.a_run.fani  Basic.fmod  Basic.prefab  bullet.prefab  characters.ini
assets/effects/: Fireball.png.ini  arc_lightning.prefab  fire.prefab  fireball.fmat  flame_thrower.prefab  ice.fmat  smoke.fmat
assets/icons/: roguelikeitems.png.ini  rpg_cursor_set.png.ini
assets/items/: items.ini
assets/knight/: Paladin WProp J Nordstrom.fmod  Paladin WProp J Nordstrom.prefab  Paladin WProp J Nordstrom_Paladin_MAT.fmat  paladin_prop_j_nordstrom.fmod  paladin_prop_j_nordstrom.prefab  paladin_prop_j_nordstrom_Paladin_MAT.fmat
assets/lava_man/: lava_man.fmat  lava_man_unrigged.fbx  lava_man_unrigged.fmod  lava_man_unrigged.prefab  lava_man_unrigged_Material.001.fmat
assets/materials/: Material.001.fmat
assets/medieval_house/: Medieval_House.prefab  Medieval_House_DefaultMaterial.fmat
assets/models/: Arrow00_mesh_Arrow00_mat.fmat  Medieval_House.fmod  Medieval_House.prefab  Medieval_House_DefaultMaterial.fmat  arrow.prefab  chest.prefab  chest3-final.fmod  chest3-final.prefab  chest3-final_UV-Material.fmat  fire_0.fmat  fireball.prefab  grid_unit.fmod  laubbaum.fbx  laubbaum.fmod  laubbaum.prefab  laubbaum_Material.fmat  rock1.prefab  rock1_mat_rock_01.fmat
assets/objects/: Arrow00_mesh.fmod  Arrow00_mesh_Arrow00_mat.fmat  arrow.prefab
assets/rocks/: 1.fmod  1.prefab  1_mat_rockform_1.fmat  1_mossy_rock_01.fmat  2.fmod  2.prefab  2_mat_rockform_2.fmat  rock1.fmod  rock1.prefab  rock1_mat_rock_01.fmat
assets/shaders/: post_shading.glsl
assets/skies/: daytime_bc7.dds  daytime_bc7_irr.dds  daytime_bc7_rad.dds  daytime_irr.dds
assets/terrain/: height.png.info  main.prefab  spawn_settings.txt  terrain.fmat  terrain.prefab
assets/trees/: laubbaum.prefab  laubbaum_Material.fmat
assets/ui/: action_slot.prefab  attack_slot.prefab  building_info.prefab  building_slot.prefab  building_slot0.prefab  button.prefab  construction_slot.prefab  formation_slot.prefab  hp_bar.prefab  resources_bar.prefab  training_slot.prefab  unit_slot.prefab
assets/volume/: volume.fmat  volume.prefab
blender/: human_basic.blend  human_basic_uv.blend  human_basic_uv_rigged.blend  human_basic_uv_rigged.blend1
code/: audio.cpp  audio.h  command.cpp  control.cpp  control.h  game.cpp  game.h  head.h  main.cpp  map.cpp  map.h  network.h  player.cpp  player.h  presets.cpp  presets.h
code/entities/: ai.cpp  (+29 more)
cpp/: ability.cpp  ability.h  audio.cpp  audio.h  buff.cpp  buff.h  character.cpp  character.h  chest.cpp  chest.h  collider.cpp  collider.h  command.cpp  command.h  control.cpp  control.h  creep_ai.cpp  creep_ai.h  effect.cpp  effect.h  floating_text.cpp  floating_text.h  game.cpp  game.h  head.h  item.cpp  item.h  launcher.cpp  launcher.h  main.cpp  main.h  map.cpp  map.h  network.cpp  network.h  nw_data_harvester.cpp  nw_data_harvester.h  object.cpp  object.h  player.cpp  (+10 more)
(+199 files in other folders)
