cmake_minimum_required(VERSION 3.16.4)
set(flame_path "$ENV{FLAME_PATH}")
include("${flame_path}/utils.cmake")
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
add_definitions(-W0 -std:c++latest)

project(dota_pubg)

set_output_dir("${CMAKE_SOURCE_DIR}/bin")

set(GLM_INCLUDE_DIR "")
set(IMGUI_DIR "")
file(STRINGS "${flame_path}/build/CMakeCache.txt" flame_cmake_cache)
foreach(s ${flame_cmake_cache})
	if(GLM_INCLUDE_DIR STREQUAL "")
		string(REGEX MATCH "GLM_INCLUDE_DIR:PATH=(.*)" res "${s}")
		if(NOT res STREQUAL "")
			set(GLM_INCLUDE_DIR ${CMAKE_MATCH_1})
		endif()
	endif()
	if(IMGUI_DIR STREQUAL "")
		string(REGEX MATCH "IMGUI_DIR:PATH=(.*)" res "${s}")
		if(NOT res STREQUAL "")
			set(IMGUI_DIR ${CMAKE_MATCH_1})
		endif()
	endif()
endforeach()

file(GLOB_RECURSE source_files "cpp/*.h*" "cpp/*.c*")
add_library(cpp SHARED ${source_files})
target_compile_definitions(cpp PUBLIC USE_IMGUI)
target_include_directories(cpp PUBLIC "${GLM_INCLUDE_DIR}")
target_include_directories(cpp PUBLIC "${IMGUI_DIR}")
target_include_directories(cpp PUBLIC "${flame_path}/include")
target_link_libraries(cpp "${flame_path}/bin/debug/imgui.lib")
target_link_libraries(cpp "${flame_path}/bin/debug/flame_foundation.lib")
target_link_libraries(cpp "${flame_path}/bin/debug/flame_graphics.lib")
target_link_libraries(cpp "${flame_path}/bin/debug/flame_universe.lib")
add_custom_command(TARGET cpp POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${flame_path}/bin/debug/libmysql.dll" $(TargetDir))
add_custom_command(TARGET cpp POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${flame_path}/bin/debug/assimp-vc143-mtd.dll" $(TargetDir))
add_custom_command(TARGET cpp POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${flame_path}/bin/debug/flame_foundation.dll" $(TargetDir))
add_custom_command(TARGET cpp POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${flame_path}/bin/debug/flame_foundation.typeinfo" $(TargetDir))
add_custom_command(TARGET cpp POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${flame_path}/bin/debug/flame_graphics.dll" $(TargetDir))
add_custom_command(TARGET cpp POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${flame_path}/bin/debug/flame_graphics.typeinfo" $(TargetDir))
add_custom_command(TARGET cpp POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${flame_path}/bin/debug/flame_universe.dll" $(TargetDir))
add_custom_command(TARGET cpp POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${flame_path}/bin/debug/flame_universe.typeinfo" $(TargetDir))

add_executable(dota_pubg "app.cpp")
target_link_libraries(dota_pubg cpp)
